--- a/documentation/modules/ROOT/pages/3-03-model-api.adoc
+++ b/documentation/modules/ROOT/pages/3-03-model-api.adoc
@@ -14,7 +14,11 @@ image::model-serving/ds-project-model-list-url.png[Model URL]
 
 For this internal service, we can access it by communicating directly with the service the same way an application in your project would.  One of the easiest way to do test it out, is from a notebook in the same project.
 
-Let's go back to the Jupyter environment and try out our new endpoint.
+Let's go back to the Jupyter environment and try out our new endpoint.  We'll be trying out REST API calls in `4_rest_requests.ipynb` and gRPC requests in `5_grpc_requests.ipynb`.
+
+image::model-serving/wb-notebook-requests.png[Request Notebooks]
+
+
 
 * 
 
